Tue Nov 10 12:10:33  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          ACE_RUN_VX_TGTHOST shouldn't be used in a test script

Tue Nov 10 06:31:33  2009  Steve Huston  <shuston@riverace.com>

        * ace/Message_Queue_T.cpp (enqueue_*): When enqueuing blocks, grab the
          notifier pointer before releasing the guard; check it and do any
          needed notify() outside the lock scope. Avoids dereferencing 'this'
          when the message queue is deleted between the time the guard is
          released and the notify is checked. User is still responsible for
          ensuring the lifetime of a notifier the user supplies.
          Also, moved the monitor updates out of notify() and into the
          enqueue_* methods, inside the guard scope since they refer to
          object state; rely on the Monitor docs that say the updates are
          well-behaved.

Tue Nov 10 00:35:52 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp: Some changes extraneous to those in
          Wed Nov  4 00:07:49 UTC 2009  Steve Huston  <shuston@riverace.com>
          got checked in by accident; these screwed up the handle resuming
          and are now reverted. The changes/fix mentioned in
          Wed Nov  4 00:07:49 UTC 2009  Steve Huston  <shuston@riverace.com>
          are now the only ones included.

Mon Nov  9 12:20:05 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/Message_Queue_Test.cpp:

           Modified to use rand_r, which is actually thread safe.

Mon Nov  9 03:41:21 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/Message_Queue_Test.cpp:

          Another attempt at fixing this problem on Snow Leopard, hopefully
          less disruptive than the last attempt.

Sat Nov  7 08:32:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Fix long double for ppc64
